zarf/istio-sample/virtual-service.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: helloworld-gateway
# spec:
#   selector:
#     istio: ingressgateway # use istio default controller
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: helloworld
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - helloworld-gateway
#   http:
#   - match:
#     - uri:
#         exact: /hello
#     route:
#     - destination:
#         host: helloworld
#         port:
#           number: 5000
# ---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-destination-rule
  namespace: infrastructure
spec:
  host: helloworld
  subsets:
  - name: "v1"
    labels:
      version: "v1"
  - name: "v2"
    labels:
      version: "v2"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-virtual-service
  namespace: infrastructure
spec:
  hosts:
  - helloworld
  http:
  - route:
    - destination:
        host: helloworld
        subset: "v1"
        port:
          number: 5000
      weight: 0
    - destination:
        host: helloworld
        subset: "v2"
        port:
          number: 5000
      weight: 100
